--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
   "dependencies": {
     "@gsap/react": "^2.1.2",
     "@hookform/resolvers": "^5.2.2",
+    "@react-email/components": "^1.0.7",
+    "@react-email/render": "^2.0.4",
     "@react-three/fiber": "^10.0.0-alpha.2",
+    "@sanity/image-url": "^2.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "gsap": "^3.14.2",
     "lucide-react": "^0.563.0",
     "motion": "^12.34.0",
     "next": "16.1.6",
+    "next-sanity": "^12.1.0",
     "next-themes": "^0.4.6",
     "postcss": "^8.5.6",
     "radix-ui": "^1.4.3",
